--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
@@ -10,4 +10,10 @@ body{
     flex-shrink: 1;
     flex-grow: 1;
 
+}
+
+@media all and (prefers-color-scheme: dark) {
+    .google-logo img {
+        content: url("/img/googlelogo_light_color_272x92dp.png");
+    }
 }
